# WCP-Compliance-Agent-V3

./: .env.example  .gitignore  =  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  V3_FINALIZATION_SUMMARY.md  V4_READINESS_IMPLEMENTATION_REPORT.md  docker-compose.yml  llms.txt  render.yaml  requirements.txt  test.json  vercel.json
backend/: .env.example  Dockerfile  README.md  celeryconfig.py  pyproject.toml  pytest.ini
backend/migrations/: 001_create_audit_tables.py  002_add_pgvector.py  003_create_job_queue.py  004_add_analytics_indexes.py  005_create_users_table.py  env.py
backend/migrations/versions/: 001_create_audit_tables.py  002_add_pgvector.py  004_add_analytics_indexes.py  006_add_decisions_trust_band_index.py  006_v4_foundation.py
backend/scripts/: etl_sam_gov.py  generate_baseline.py  quick_verify.py  seed_all.py  seed_dbwd-Prince.py  seed_dbwd.py  seed_elasticsearch-Prince.py  seed_elasticsearch.py  seed_vectors-Prince.py  seed_vectors.py
backend/src/wcp_backend/: config.py  main.py
backend/tests/: conftest.py
backend/tests/eval/: baseline_scores.json  golden_set.json  golden_set_text.json  regression_test.py  run_eval.py  test_golden_set.py  test_golden_set_text.py
backend/tests/integration/: conftest.py  test_api_analytics.py  test_api_decisions.py  test_api_jobs.py  test_api_search.py  test_dbwd_endpoint.py  test_e2e_pipeline.py  test_extract_endpoint.py  test_health_endpoint.py  test_infrastructure.py  test_v4_integration.py  test_validate_endpoint.py
backend/tests/unit/: conftest.py  test_analytics.py  test_api_dbwd.py  test_api_phase1.py  test_auth.py  test_checks.py  test_connectors.py  test_contracts.py  test_dbwd_lookup.py  test_events.py  (+9 more)
backend/validation_artifacts/: job_31a2b1d1-efa6-4676-883e-4eb8a4cb5681.json
(+458 files in other folders)
